# The_Project

./: .gitignore  BUGS.md  CHANGELOG.md  Documentation Gantt Chart.gan  LICENSE  README.md  ROADMAP.md  The Project Alpha Timetable.gan  The Project Gantt Chart.gan  requirements.txt  setup.cfg  setup.py
the_project/: constants.py  main.py  pseudocode.txt  version.py
the_project/assets/maps/: New Piskel-20211209-131432.piskel  the_project_prototype.tiled-session  the_project_prototype_map_1.json  the_project_prototype_test_map_battle.json  the_project_prototype_test_map_sparse.json  the_project_prototype_test_map_sparse_2.json  the_project_prototype_test_map_sparse_3.json
the_project/assets/maps/tile sheets/: building_tileset_blue.json  building_tileset_red.json  the_project_prototype_ground_tilesheet.json
the_project/assets/paint.net Files/: Basic 8x8 Tilehsheet.pdn  Ground Tilesheet 2.pdn  Prototype Ground Tilesheet.pdn
the_project/assets/paint_files/: Ground Tilesheet 2.pdn  Prototype Ground Tilesheet Export 1.pdn  Prototype Ground Tilesheet.pdn
the_project/assets/piskel_files/: Button_Icons.piskel  Hotbar_Icons-20220223-151238.piskel  Hotbar_Icons-20220304-015627.piskel  Hotbar_Icons.piskel  New Piskel-20211209-132804.piskel  Selected Hotbar-20220223-131312.piskel
the_project/database/: database.db  setup_database.py
the_project/entities/: being_built.py  building.py  bullet.py  entity.py  player.py  resource.py
the_project/special_scripts/: buttons.py  fading_text.py  items.py  paths.py
(+27 files in other folders)
