[metadata]
name = The_Project
description = An RTS Game developed with Python using the Arcade library.
long_description = file: README.md
author = Sneeky-Man
license = MIT
license-file = LICENSE
url = https://github.com/Sneeky-Man/The_Project

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
install_requires =
  arcade >= 2.6.6
